Bugfix: Hide overflow of complex menus.

--- a/core51/core.responsive.css
+++ b/core51/core.responsive.css
@@ -6,7 +6,12 @@
 body { padding: 0; margin: 0; }
 .acclink { display: none; }
 
-#page { max-width: 1024px; margin: 0 auto; padding: 10px; }
+#page {
+	max-width: 1024px;
+	margin: 0 auto;
+	padding: 10px;
+	overflow-x: hidden;
+}
 
 /* Ehemals #themenmenue -> Umbenannt zu .nav_menu */
 .nav_menu { 
